--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/TFleury/Demo-TypeScript#readme",
   "devDependencies": {
+    "@types/jquery": "^2.0.41",
+    "jquery": "^3.2.1",
     "lite-server": "^2.3.0",
     "typescript": "^2.2.2"
   }
