--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jquery": "^2.0.41",
     "jquery": "^3.2.1",
     "lite-server": "^2.3.0",
+    "systemjs": "^0.20.12",
     "typescript": "^2.2.2"
   }
 }
