--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "sourceMap": true
     },
     "include": [
-        "*.ts"
+        "app/*.ts"
     ],
     "exclude": [
         "node_modules"
